test/types/string/assignToChar/testInit.4.good
Helpers.chpl:6: In function 'testInitVal':
Helpers.chpl:7: error: cannot initialize 'x' of type 'int(8)' from a 'string'
  testInit.chpl:12: called as testInitVal(strBytes: string, type toType = int(8))
